# Poker-Bot

./: .gitignore  CMakeLists.txt  FEATURES_ADDED.md  FEATURES_IN_PROGRESS.md  LICENSE  MATH_FEATURES_ROADMAP.md  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  poker-math.js
.github/actions/sync-package-lock/: action.yml
.github/workflows/: native-prebuild.yml  npm-publish.yml  package-lock.yml  sync-package-lock.yml
examples/: demo.mjs  simple_bot_main.cpp
include/poker/: bot_config.hpp  card.hpp  deck.hpp  exact_equity.hpp  game_engine.hpp  game_state.hpp  hand_evaluator.hpp  icm.hpp  monte_carlo.hpp  opponent_model.hpp  poker_bot_interface.hpp  poker_math.hpp  side_pot.hpp  strategy.hpp  types.hpp
native/: binding.cpp
prebuilds/: README.md
scripts/: assemble-prebuilds.js  build-native.js  check-prebuilds.js  compile-addon.js  run-native-tests.js  should-npm-publish.js  stage-prebuild.js  sync-package-lock.sh  verify-package-lock.js  verify-tag-version.js
src/: bot_config.cpp  card.cpp  deck.cpp  exact_equity.cpp  game_engine.cpp  hand_evaluator.cpp  icm.cpp  monte_carlo.cpp  opponent_model.cpp  poker_bot_interface.cpp  poker_math.cpp  side_pot.cpp  strategy.cpp
tests/: test_bot_config.cpp  test_deck.cpp  test_exact_equity.cpp  test_game_engine.cpp  test_hand_evaluator.cpp  test_icm.cpp  test_monte_carlo.cpp  test_opponent_model.cpp  test_poker_math.cpp  test_side_pot.cpp  test_strategy.cpp
